tests/ui/resolve/issue-82156.rs
fn main() {
    super(); //~ ERROR failed to resolve: there are too many leading `super` keywords
}
